# PrivML_

./: CMakeLists.txt  README.md
CONFIG/: 1.config  DAPPLE.config  DAPPLE_VFDT_Bank.config  DAPPLE_VFDT_Nursery.config
CRYPTO/: DTPKC.cpp  DTPKC.h  EvalAdd.cpp  EvalAdd.h  EvalAddPow2.cpp  EvalAddPow2.h  EvalCmp.cpp  EvalCmp.h  EvalCmp100.cpp  EvalCmp100.h  EvalDiv.cpp  EvalDiv.h  EvalDiv100.cpp  EvalDiv100.h  EvalDotProd.cpp  EvalDotProd.h  EvalEntropy.cpp  EvalEntropy.h  EvalExpo.cpp  EvalExpo.h  EvalHBound.cpp  EvalHBound.h  EvalLog.cpp  EvalLog.h  EvalLrUpdate.cpp  EvalLrUpdate.h  EvalMult.cpp  EvalMult.h  EvalProba.cpp  EvalProba.h  EvalSigmoid.cpp  EvalSigmoid.h  EvalSqrt.cpp  EvalSqrt.h  EvalStandardDiv.cpp  EvalStandardDiv.h  EvalSub.cpp  EvalSub.h  EvalSub2.cpp  EvalSub2.h  (+4 more)
ML/EVAL/: EvaluateClassification.py
ML/IO/: DatasetReader.cpp  DatasetReader.h  Record.h
ML/LR/: LR.cpp  LR.h
ML/NB/: NB_Classifier.cpp  NB_Classifier.h  Stats.cpp  Stats.h
ML/NN/: NN.cpp  NN.h  neuron.cpp  neuron.h
ML/VFDT/: Node.cpp  Node.h  NodeStats.cpp  (+5 more)
SER/: dtpkc.ser
TEST/: TESTBuildingBlocks.cpp  TESTBuildingBlocks.h  TESTCryptoDatasetReader.cpp  TESTCryptoDatasetReader.h  TESTDTPKC.cpp  TESTDTPKC.h  TESTDatasetReader.cpp  TESTDatasetReader.h  TESTElementaryOps.cpp  TESTElementaryOps.h  TESTNppNB.cpp  TESTNppNB.h  TESTNppVFDT.cpp  TESTNppVFDT.h  TESTpacking.cpp  TESTpacking.h  TESTppNB.cpp  TESTppNB.h  TESTppVFDT.cpp  TESTppVFDT.h  TestOpenMp.cpp  TestOpenMp.h  main.cpp
UTIL/: math_util.cc  math_util.hh  mpz_class.hh  num_th_alg.cc  num_th_alg.hh  prime_seq.cc
(+60 files in other folders)
